force-app/main/default/objects/AAT_Review__c/AAT_Review__c.object-meta.xml
<CustomObject>
    <label>AAT Review</label>
    <nameField>
        <displayFormat>ATR-{0000}</displayFormat>
        <label>Case Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAT Reviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>