force-app/main/default/objects/AAT_Review__c/fields/AAT_Review_Outcome__c.field-meta.xml
<CustomField>
    <fullName>AAT_Review_Outcome__c</fullName>
    <label>AAT Review Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affirm</fullName>
            </value>
            <value>
                <fullName>Vary</fullName>
            </value>
            <value>
                <fullName>Set aside the Decision and Substitute a new Decision</fullName>
            </value>
            <value>
                <fullName>Set aside and remit the Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>