force-app/main/default/objects/AAT_Review__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>BusinessLicenseApplication</referenceTo>
    <relationshipLabel>AAT Reviews</relationshipLabel>
    <relationshipName>AAT_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>