force-app/main/default/objects/AAT_Review__c/fields/Date_Review_Lodged_with_AAT__c.field-meta.xml
<CustomField>
    <fullName>Date_Review_Lodged_with_AAT__c</fullName>
    <label>Date Review Lodged with AAT</label>
    <type>Date</type>
</CustomField>