force-app/main/default/objects/AAT_Review__c/fields/Decision_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Effective_Date__c</fullName>
    <label>Decision Effective Date</label>
    <type>Date</type>
</CustomField>