force-app/main/default/objects/AAT_Review__c/fields/Outcome_Comments__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Comments__c</fullName>
    <label>Outcome Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>