force-app/main/default/objects/AAT_Review__c/fields/Request_Comments__c.field-meta.xml
<CustomField>
    <fullName>Request_Comments__c</fullName>
    <label>Request Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>