force-app/main/default/objects/AAT_Review__c/validationRules/AAT_Review_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>AAT_Review_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),!ISNULL(Application__c), TEXT(Application__r.Application_Status__c)!=&quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>Application must be closed before AAT review is requested.</errorMessage>
</ValidationRule>